opam-version : "2.0"
name         : "tjr_path_resolution"
version      : "0.0.1" 
synopsis     : "Description FIXME"

# ----------------------------------------------------------------------

maintainer  : "Tom Ridge <tom.j.ridge@googlemail.com>"
authors     : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage    : "https://github.com/tomjridge/???"
bug-reports : "https://github.com/tomjridge/???/issues"
dev-repo    : "git://github.com/tomjridge/???.git"

# ----------------------------------------------------------------------

depends: [
  "ocamlfind"
  "dune"
  "tjr_monad"
  "tjr_fs_shared"
]

# ----------------------------------------------------------------------

build: ["dune" "build" "-p" name "-j" jobs]
